# lif

./: .gitignore  Makefile  README.md  lif_lsm.m  pyproject.toml  train_readout.m
lif/: lif_lsm.py  main.py  train_readout.py
